# ultrahuman-dashboard

./: .gitignore  .pre-commit-config.yaml  .spellcheck-allowlist  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: configure.sh  update.sh
tests/: test_ultrahuman_dashboard.py
ultrahuman_dashboard/: formatting.py  main.py  plots.py  schemas.py  ultrahuman_api.py
