[tool.poetry]
name = "ultrahuman-dashboard"
version = "0.0.1"
description = "Ultrahuman Dashboard"
authors = ["Matt Krainski <mateusz@krainski.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.46.1"
requests = "^2.32.4"
pydantic = "^2.11.7"
plotly = "^6.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
darglint = "^1.8.1"
flake8 = "^7.3.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.10.31"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.16.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.1"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.15.1"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
flake8-black = "^0.3.6"
isort = "^6.0.1"
coverage = "^7.9.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
dictionaries = ["en_US", "python", "technical"]
builtins-ignorelist = ["id"]
ignore = ["D104", "D100", "D101", "D106", "W503"]
per-file-ignores = """
    tests/**: S101
"""
whitelist = ".spellcheck-allowlist"
strictness = "long"

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
known_first_party = []

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
configure = "./scripts/configure.sh"
update = "./scripts/update.sh"
lint = "flake8 scripts tests ultrahuman_dashboard"
test = 'coverage run -m pytest --showlocals'
hooks-run = "pre-commit run --all-files"
hooks-update = "pre-commit auto-update"
run = "streamlit run ultrahuman_dashboard/main.py"

[tool.poe.tasks.test-full]
sequence = [
  { ref = "test" }
]
